--- a/webui/templates/programs.jinja2
+++ b/webui/templates/programs.jinja2
@@ -47,8 +47,13 @@
                 {% for program in programs %}
                     <tr>
                         <td><span class="mono"><a href="/program?id={{ program.program_id }}">{{ program.program_id }}</a></span></td>
-                        <td><a href="/block?h={{ program.height }}">{{ program.height | format_number | safe }}</a></td>
-                        <td><span class="mono"><a href="/transaction?id={{ program.transaction_id }}">{{ program.transaction_id }}</a></span></td>
+                        {% if program.height %}
+                            <td><a href="/block?h={{ program.height }}">{{ program.height | format_number | safe }}</a></td>
+                            <td><span class="mono"><a href="/transaction?id={{ program.transaction_id }}">{{ program.transaction_id }}</a></span></td>
+                        {% else %}
+                            <td>-</td>
+                            <td>-</td>
+                        {% endif %}
                         <td>{{ program.called }}</td>
                     </tr>
                 {% endfor %}
