--- a/webui/templates/base.jinja2
+++ b/webui/templates/base.jinja2
@@ -77,14 +77,15 @@
         </div>
     </div>
 </div>
-{% if maintenance is defined and maintenance != None %}
+{% if sync_info is defined and sync_info.out_of_sync %}
     <div class="content">
     <div class="callout alert global-banner">
-        {% if maintenance %}
-            The explorer is resyncing with the network: {{ info }} The data below is not up-to-date. Please check back later.
+        {% if sync_info.maintenance_info %}
+            The explorer is resyncing with the network: {{ sync_info.maintenance_info }}
         {% else %}
-            The explorer is out of sync - the last block was {{ info }}. The data below might not be up-to-date.
+            The explorer is out of sync. The last synced block is {{ sync_info.relative_time }} ago.
         {% endif %}
+        Current block height: {{ sync_info.local_height }} / {{ sync_info.remote_height }}
     </div>
     </div>
 {% endif %}
