--- a/webui/templates/program.jinja2
+++ b/webui/templates/program.jinja2
@@ -34,6 +34,11 @@
             padding: 8px;
         }
 
+        #read input:not([type]), #read input[type="text"] {
+            font-size: 0.9rem !important;
+            font-family: monospace !important;
+        }
+
     </style>
 
 {% endblock %}
