--- a/webui/templates/base.jinja2
+++ b/webui/templates/base.jinja2
@@ -57,7 +57,7 @@
                         <li><a href="/feedback">Feedback</a></li>
                     </ul>
                 </li>
-                <li><a href="{{ "API_DOC_ROOT" | get_env }}">API</a></li>
+                <li><a href="{{ "API_DOC_ROOT" | get_env }}" target="_blank">API</a></li>
                 {% if "HAS_BETA" | get_env %}
                     <li style="margin-left: auto"><a href="//explorerb.hamp.app">Preview</a></li>
                 {% endif %}
