add env to example and rename conflict

--- a/webui/templates/program.jinja2
+++ b/webui/templates/program.jinja2
@@ -257,7 +257,7 @@
         }
 
         try {
-            const response = await fetch(`{{ "API_HOST" | get_env }}/v1/mapping/get_value/{{ program_id }}/${mapping}/${input.value}`)
+            const response = await fetch(`{{ "API_ROOT" | get_env }}/v1/mapping/get_value/{{ program_id }}/${mapping}/${input.value}`)
             const data = await response.json()
             if (!response.ok) {
                 value.innerText = "Error loading data: " + data.error
