--- a/webui/templates/upload_source.jinja2
+++ b/webui/templates/upload_source.jinja2
@@ -31,7 +31,7 @@
         <div class="callout warning">
             The source code has already been uploaded for this program.
         </div>
-    {% elif has_imports %}
+    {% elif unsupported_import %}
         <div class="callout warning">
            Programs with imports other than <span class="mono">credits.aleo</span> are not supported yet.
         </div>
@@ -46,6 +46,11 @@
                 <textarea name="source">{{ source }}</textarea>
             </label>
             <input type="hidden" name="id" value="{{ program_id }}">
+            {% for import in imports %}
+                <input type="hidden" name="imports[]" value="{{ import }}">
+                {# expand this to textareas in the future #}
+                <input type="hidden" name="import_programs[]" value="">
+            {% endfor %}
             <button type="submit" class="button">Submit</button>
         </form>
     {% endif %}
