make feedback contact optional

--- a/webui/templates/feedback.jinja2
+++ b/webui/templates/feedback.jinja2
@@ -27,7 +27,7 @@
         {% endif %}
 
         <form action="/submit_feedback" method="post">
-            <label>Contact:
+            <label>Contact (optional):
                 <input type="text" name="contact" placeholder="Email, Discord, etc." value="{{ contact }}">
             </label>
             <p class="help-text">Your contact info might be used to provide answers to your feedback.</p>
