*Temporary* add analytic events
those should be in workers

--- a/webui/templates/400.jinja2
+++ b/webui/templates/400.jinja2
@@ -10,4 +10,6 @@
         <pre>{{ exc.detail }}</pre>
     </div>
 
+    <script>document.addEventListener('DOMContentLoaded', function () { plausible('400', { props: { path: document.location.pathname } }); });</script>
+
 {% endblock %}
