--- a/webui/templates/base.jinja2
+++ b/webui/templates/base.jinja2
@@ -21,7 +21,7 @@
         {% endif %}
         }
     </style>
-    <link rel="stylesheet" href="/static/base_style_v2.css">
+    <link rel="stylesheet" href="/static/base_style_v3.css">
     {% block head %}{% endblock %}
 </head>
 <body>
@@ -35,7 +35,7 @@
                 {% else %}
                     <li class="menu-text">Haruka's Aleo Explorer</li>
                 {% endif %}
-                <li><a href="/">Home</a></li>
+                <li><a hx-get="/" hx-target="#htmx-body" hx-push-url="true">Home</a></li>
                 <li>
                     <a href="#">Blockchain</a>
                     <ul class="menu">
@@ -94,7 +94,9 @@
     <span style="display: none">in_sync</span>
 {% endif %}
 <div class="container">
+<div id="htmx-body">
 {% block content %}{% endblock %}
+</div>
 <div class="footer-container">
     <div class="settings">
         Timezone display: <a onclick="toggle_timezone()"><span id="timezone-setting"></span></a><br>
@@ -114,6 +116,9 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.7.4/js/foundation.min.js"
         integrity="sha512-+CnEgueYRDzx2s3IIAOpZd8HeOfrSbK3loeHw0jXJODAe3eFROHpBxEsun2kU+sZCaoAA0eFJrhfVV3RGG50GA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/htmx/1.9.4/htmx.min.js"
+        integrity="sha512-ZM2vxgVBxhBI5Etj/c/qcJV+upate3VzbVQOQRCx1YGuyEX9dYdMh8pRUot4xIwtAay6QwRQC/FdXRjSWIEHrg=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 {% block content_script %}{% endblock %}
 <script>
