--- a/webui/templates/faq.jinja2
+++ b/webui/templates/faq.jinja2
@@ -2,17 +2,9 @@
 
 {% block title %}FAQ - Haruka's Aleo Explorer{% endblock %}
 
-{% block head %}
-    <style>
-    .content {
-        font-size: 1rem;
-    }
-    </style>
-{% endblock %}
-
 {% block content %}
 
-    <div class="content">
+    <div class="content" style="font-size: 1rem">
 
         <div class="header">
             <h3>FAQ</h3>
